fix(us-2466): envoi message groupe shift body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ body {
   padding: 0;
   margin: 0;
   color: theme('colors.content_color');
+  position: fixed;
 }
 
 a {
